<resources>
    <string name="app_name">Skywise</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sunset_time_sample">6:14 pm</string>
    <string name="sun_set">Sun Set</string>
    <string name="sun_set_image">sun set image</string>
    <string name="sun_rise_sample">6:54 am</string>
    <string name="sun_rise">Sun Rise</string>
    <string name="sun_rise_image">Sun Rise Image</string>
    <string name="feels_like_temps">Feels Like </string>
    <string name="text_location_sample">Alexandria,EG</string>
    <string name="current_temps_sample">17°</string>
    <string name="current_weather_desc_sample">Partly cloudy</string>
    <string name="current_weather_image">Current Weather Image</string>
    <string name="hour_sample">10 pm</string>
    <string name="precipitation_sample">100%</string>
    <string name="day_name_sample">Friday</string>
    <string name="sample_date">Wed 00/00 </string>
    <string name="high_temps_sample">25°</string>
    <string name="low_temps_sample">17°</string>
    <string name="water_droplet">water droplet</string>
    <string name="weather_icon">Weather icon</string>
    <string name="uv_index">UV index</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="sun_set_sample">6:16 PM</string>
    <string name="weather">Weather</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="add_locations_to_favorites">Add Locations To Favorites</string>
    <string name="location_saved">Location Saved</string>
    <string name="data_updated">Data Updated</string>
    <string name="data_not_retrieved">Couldn\'t retrieve data</string>
    <string name="updating_data">Updating Data</string>
    <string name="showing_offline_data">Showing Offline Data</string>
    <string name="location_area">Alexandria, EG</string>
    <string name="current">Current</string>
    <string name="temprature">Temperature</string>
    <string name="weather_desc">Condition</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="couldnt_fetch_data">Couldn\'t Fetch Data</string>
    <string name="try_again">Click here to try again</string>
    <string name="language">Language</string>
    <string name="units">Units</string>
    <string name="metric">Metric</string>
    <string name="standard">Standard</string>
    <string name="imperial">Imperial</string>
    <string name="location">Location</string>
    <string name="select_on_map">Select On Map</string>
    <string name="gps">GPS</string>
    <string name="offline_message">you\'re currently offline!</string>
    <string name="english">English</string>
    <string name="arabic">العربية</string>
    <string name="alerts">Alerts</string>
    <string name="min">with lows of</string>
    <string name="max">with highs of</string>
    <string name="set_alarm">set alarm</string>
    <string name="draw_over_other_apps">Draw Over Other Applications</string>
    <string name="from">"From : "</string>
    <string name="to">"To : "</string>
    <string name="select_date">Select Date</string>
    <string name="click_to_specify">Click To Specify</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="date_not_valid">Start or End Dates Are Not Valid</string>
    <string name="notification">Notification</string>
    <string name="alert_dialog">Alert Dialog</string>
    <string name="weather_condition">Weather Condition</string>
    <string name="ok">OK</string>
    <string name="greeting">Welcome To Skywise Where You can Check On Weather Condition at AnyPlace Whenever Connected To The Internet</string>
    <string name="swipe_to_continue">Swipe To Continue</string>
    <string name="how_do_you_want_to_be_located">Tell us How Do You Want To Be Located</string>
    <string name="locate_yourself_on_map">Locate Yourself On Map</string>
    <string name="get_location_by_gps">Get Location By GPS</string>
    <string name="how_do_you_want_to_get_informed">How Do You Want To Get Informed With The Latest Weather Details?</string>
    <string name="draw_over_other_apps_explaination">If you want to get notified with a pop you have to enable draw over other applications permission</string>
    <string name="all_done">All Done !</string>
    <string name="get_started">Lets Get Started !</string>
    <string name="trun_on_location">Please Turn On Location In Settings</string>
</resources>