<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/weatherFragment">

    <fragment
        android:id="@+id/weatherFragment"
        android:name="com.example.skywise.weatherscreen.WeatherFragment"
        android:label="@string/weather"
        tools:layout="@layout/fragment_weather" />
    <fragment
        android:id="@+id/favoriteLocationsFragment"
        android:name="com.example.skywise.favoritelocations.FavoriteLocationsFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_favorite_locations" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.skywise.settingsscreen.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
</navigation>