<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.skywise.presentation.ui.favoritelocations.FavoriteLocationsViewModel" />

        <variable
            name="location"
            type="com.example.skywise.data.models.FavoriteLocation" />


    </data>


    <androidx.cardview.widget.CardView
        android:id="@+id/location_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/area_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="92dp"
                android:layout_marginBottom="8dp"
                android:text="@{location.area}"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/info_card"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/location_area" />

            <TextView
                android:id="@+id/is_current_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/current"
                android:textSize="16sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/area_text"
                app:layout_constraintStart_toEndOf="@+id/area_text"
                app:layout_constraintTop_toTopOf="@+id/area_text"
                tools:visibility="visible" />

            <ImageButton
                android:id="@+id/remove_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:background="@drawable/circle"
                android:onClick="@{()-> viewModel.removeLocation(location)}"
                android:src="@drawable/remove"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/area_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/area_text"
                tools:visibility="visible" />

            <androidx.cardview.widget.CardView
                android:id="@+id/info_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/area_text">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/cur_weather_image"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginBottom="12dp"
                        app:layout_constraintBottom_toTopOf="@+id/guideline10"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/guideline9"
                        app:layout_constraintTop_toTopOf="parent"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/clear_sky_01d"
                        app:lottie_res_id="@{viewModel.shownLocation.current.weather[0].getAnimation()}" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.64" />

                    <TextView
                        android:id="@+id/cur_temps_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@{viewModel.shownLocation.current.getTempText()}"
                        android:textSize="36sp"
                        app:layout_constraintEnd_toStartOf="@+id/guideline9"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="@string/current_temps_sample" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintGuide_begin="150dp" />

                    <TextView
                        android:id="@+id/cur_desc_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@{viewModel.shownLocation.current.weather.get(0).description}"
                        app:layout_constraintBottom_toTopOf="@+id/guideline10"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/guideline9"
                        tools:text="@string/current_weather_desc_sample" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:text="@{@string/feels_like_temps + ' ' + viewModel.shownLocation.current.getFeelsLikeText()}"
                        app:layout_constraintEnd_toStartOf="@+id/cur_weather_image"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cur_temps_tv"
                        tools:text="@string/feels_like_temps" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.32" />

                    <TextView
                        android:id="@+id/cur_high_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:text="@{@string/high + ' ' + viewModel.shownLocation.daily.get(0).temp.getMaxText()}"
                        app:layout_constraintEnd_toStartOf="@+id/guideline12"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView3"
                        tools:text="@string/high" />

                    <TextView
                        android:id="@+id/cur_low_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="center"
                        android:text="@{@string/low + ' ' + viewModel.shownLocation.daily.get(0).temp.getMinText()}"
                        app:layout_constraintEnd_toStartOf="@+id/guideline9"
                        app:layout_constraintStart_toStartOf="@+id/guideline12"
                        app:layout_constraintTop_toBottomOf="@+id/textView3"
                        tools:text="@string/low" />

                    <TextView
                        android:id="@+id/cur_humidity_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:gravity="center"
                        android:text="@{@string/humidity + ' ' + viewModel.shownLocation.current.humidityText}"
                        app:layout_constraintEnd_toStartOf="@+id/guideline12"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cur_high_tv"
                        tools:text="@string/humidity" />

                    <TextView
                        android:id="@+id/cur_uv_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:gravity="center"
                        android:text="@{@string/uv_index + ' ' + viewModel.shownLocation.current.getUviText()}"
                        app:layout_constraintEnd_toStartOf="@+id/guideline9"
                        app:layout_constraintStart_toStartOf="@+id/guideline12"
                        app:layout_constraintTop_toBottomOf="@+id/cur_low_tv"
                        tools:text="@string/uv_index" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>







        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>